# Arcadia

./: .dockerignore  .env.example  .gitignore  .mise.toml  .replit  .tool-versions  Cargo.toml  Dockerfile  README.md  arcadia-qa-prep.md  brand.md  claude-session.jsonl  dev.sh  mobile-dev.sh  mobile-server.js  mobile-web.sh  nixpacks.toml  package-lock.json  package.json  pitch-deck-arcadia.html  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  replit.md  setup.sh  skills-lock.json  spec-solana-program.html
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  arcadia-design.md  arcadia-gap-fixes.md  nav-cleanup.md  rust-indexer-build.md  siws-auth-contract.md  (+1 more)
Arcadia_program/: Cargo.toml
Arcadia_program/kiln-tests/: Cargo.toml
Arcadia_program/kiln-tests/tests/: devnet_product_lifecycle.rs  full_lifecycle.rs  update_and_graduate.rs  vault_flow.rs
Arcadia_program/kiln-tests/tests/common/: mod.rs
Arcadia_program/program/: Cargo.toml
Arcadia_program/program/src/: entrypoint.rs  errors.rs  lib.rs
Arcadia_program/program/src/instructions/: create_vault.rs  custody.rs  deposit_junior.rs  deposit_senior.rs  execute_swap.rs  magicblock_er.rs  mod.rs  update_nav.rs  update_oracle_price.rs  vault_guard.rs  withdraw_junior.rs  withdraw_senior.rs
Arcadia_program/program/src/states/: mod.rs  private_intent_session.rs  utils.rs
Arcadia_program/program/tests/: unit_tests.rs
Kiln_program/: Cargo.toml
Kiln_program/kiln-tests/src/: lib.rs
Kiln_program/program/src/instructions/: claim_fees.rs  init_manager.rs
Kiln_program/program/src/states/: vault_config.rs  vault_state.rs
Kiln_program/src/: entrypoint.rs  errors.rs  lib.rs
Kiln_program/src/instructions/: claim_fees.rs  create_vault.rs  custody.rs  deposit_junior.rs  deposit_senior.rs  execute_swap.rs  mod.rs  update_nav.rs  vault_guard.rs  withdraw_junior.rs  withdraw_senior.rs
Kiln_program/src/states/: investor_position.rs  mod.rs  utils.rs  vault_config.rs
Kiln_program/tests/: initialize.rs  unit_tests.rs  update_and_graduate.rs  vault_flow.rs
app/: .pnpm-setup  App.tsx  index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
arcadia-program/arcadia_vault/: Cargo.toml
arcadia-program/arcadia_vault/src/: lib.rs
arcadia_vault/: Anchor.toml  package-lock.json  package.json
attached_assets/: Pasted--Transitions-dev-Input-clear-with-dissolve-Usage-Drop-t_1782823607560.txt  Pasted--Transitions-dev-Success-check-Usage-Wrap-your-icon-SVG_1782823618442.txt  Pasted--Transitions-dev-Tabs-sliding-Usage-div-class-t-tabs-ro_1782823596467.txt  Pasted--You-are-a-senior-UI-UX-engineer-and-product-designer-r_1777713510942.txt  Pasted-14-38-48-777-Running-build-in-Washington-D-C-USA-East-i_1782819647782.txt  Pasted-14-43-16-719-Running-build-in-Washington-D-C-USA-East-i_1782819860681.txt  Pasted-14-47-48-157-Running-build-in-Washington-D-C-USA-East-i_1782820139790.txt  Pasted-Arcadia-Indexer-Backend-Spec-Rust-Axum-service-ingest-t_1782548914318.txt  Pasted-Good-clean-gate-pattern-Now-let-me-walk-through-the-act_1782934614086.txt  Pasted-Here-is-a-tightened-UI-UX-focused-agent-prompt-with-all_1777713438561.txt  Pasted-That-file-didn-t-upload-correctly-it-s-not-a-readable-i_1782933523357.txt  Pasted-The-good-the-core-flows-are-genuinely-solid-Trader-side_1782934637300.txt  Pasted-This-is-already-far-above-average-crypto-landing-pages-_1777884070685.txt  Pasted-You-are-a-senior-Rust-Solana-engineer-specializing-in-S_1777808938427.txt  aura-mobile-finance-DESIGN_1777976899248.md  dark-design_1777713653760.md  qiln-marketplace_(1)_1777798129832.html  sherlock_xyz_solutions_audit-contests_1440w_default_1782933511803.h2d  spec-indexer_1782548957850.html  synq-dashboard_(1)_1777798129830.html
brand/: palette.css
clients/: codama.ts  package.json  tsconfig.json  vitest.config.ts
context/: arc.md  arc_v2.md  dodo_magicblock_private_bot_checklist.md  dodo_magicblock_private_bot_plan.md  e2e_test_checklist.md  landing-restructure-qa.md  overview.md  solana_program_e2e_audit.md  solana_program_e2e_matrix.md  tickets.md
docs/: 00-QUICK-REFERENCE.md  01-expo-react-native.md  02-solana-web3.md  03-anchor-framework.md  04-solana-mobile-stack.md  05-nfc-phone-to-phone.md  06-compressed-nfts-badges.md  07-colosseum-frontier.md  08-ecosystem-updates.md  09-BUILD-PLAN-CHANGES.md  arcadia-vault-program-spec.md  solana-mobile-mastery.md
marketing-video/: CREATIVE_NOTES.md  README.md  UPGRADES_APPLIED.txt  package-lock.json  package.json  remotion.config.ts  tsconfig.json
media/: .gitignore  README.md
mobile/: README.md  app.json  eas.json  expo-env.d.ts  metro.config.js  package-lock.json  package.json  polyfills.ts  tsconfig.json
scripts/: README.md  dodo-seed-test-products.mjs  install-safe-solana-builder.sh
server/: package.json
server-rs/: .env.example  Cargo.toml  FEATURES.md  nixpacks.toml
server-rs/crates/api/: Cargo.toml
server-rs/crates/api/src/: auth.rs  error.rs  lib.rs  routes.rs  simulate.rs  state.rs
server-rs/crates/chain/: Cargo.toml
server-rs/crates/chain/src/: lib.rs
server-rs/crates/core/: Cargo.toml
server-rs/crates/core/src/: events.rs  lib.rs  types.rs
server-rs/crates/db/: Cargo.toml
server-rs/crates/db/migrations/: 001_initial.sql
server-rs/crates/db/src/: lib.rs  models.rs  queries.rs
server-rs/crates/decode/: Cargo.toml
server-rs/crates/decode/src/: lib.rs
server-rs/crates/prices/: Cargo.toml
server-rs/crates/prices/src/: lib.rs
server-rs/crates/scoring/: Cargo.toml
server-rs/crates/scoring/src/: capacity.rs  lib.rs  metrics.rs  score.rs  twr.rs
server-rs/crates/workers/: Cargo.toml
server-rs/crates/workers/src/: ingest.rs  lib.rs  oracle.rs  price.rs  score.rs  supervisor.rs
server-rs/migrations/: 0001_init.sql  0002_event_keys.sql  0003_realtime_demo.sql  0004_surfpool_market_state.sql  0005_private_intents.sql  0006_dodo_checkout.sql  0007_dodo_webhooks_entitlements.sql
server-rs/src/: main.rs
tickets/: tickets.md
(+340 files in other folders)
