[package]
name = "Kiln_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"], default-features = false }
bytemuck = { version = "1.24.0", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
shank = "0.4.8"
wincode = { version = "0.5.3", default-features = false, features = ["derive"] }


[dev-dependencies]
litesvm = "0.10"
litesvm-token = "0.10"
solana-instruction = "3.0"
solana-keypair = "3.0"
solana-native-token = "3.0"
solana-pubkey = "3.0"
solana-sdk-ids = "3.0"
solana-signer = "3.0"
solana-transaction = { version = "3.0", features = ["verify"] }
wincode = { version = "0.5.3", features = ["std", "derive"] }


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
