[package]
name = "Kiln_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ────────────────────────────────────────────────────────────────────────────
# RUNTIME dependencies — MUST remain SBF-compatible.
# Do NOT add litesvm, solana 3.x, or any crate that transitively pulls in
# edition2024 / toml_edit 0.25+ / proc-macro-crate 3.x here or in
# [dev-dependencies].  Those belong exclusively in the kiln-tests crate.
# ────────────────────────────────────────────────────────────────────────────
[dependencies]
borsh     = { version = "1.5.7", features = ["derive"], default-features = false }
bytemuck  = { version = "1.24.0", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-log    = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
shank   = "0.4.8"
wincode = { version = "0.5.3", default-features = false, features = ["derive"] }

# dev-dependencies for unit_tests.rs — no litesvm, no solana 3.x
[dev-dependencies]
wincode = { version = "0.5.3", features = ["std", "derive"] }

[features]
no-entrypoint = []
std           = []
test-default  = ["no-entrypoint", "std"]
