[package]
name    = "arcadia-core"
edition.workspace = true
version.workspace = true

[dependencies]
rust_decimal        = { workspace = true }
rust_decimal_macros = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
chrono              = { workspace = true }
thiserror           = { workspace = true }
anyhow              = { workspace = true }
uuid                = { workspace = true }
