[package]
name    = "arcadia-decode"
edition.workspace = true
version.workspace = true

[dependencies]
arcadia-core = { workspace = true }
borsh        = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
base64       = { workspace = true }
bs58         = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
chrono       = { workspace = true }
rust_decimal = { workspace = true }
