[package]
name    = "arcadia-prices"
edition.workspace = true
version.workspace = true

[dependencies]
arcadia-core = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
redis        = { workspace = true }
chrono       = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio        = { workspace = true }
rust_decimal = { workspace = true }
