[package]
name    = "arcadia-scoring"
edition.workspace = true
version.workspace = true

[dependencies]
arcadia-core        = { workspace = true }
rust_decimal        = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono              = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
serde               = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
